test/sematest/valid/empty_while_stmt.java
class Test {
  public static void main(String[] args) {}
  public int test(int i) {
    while (i == 0)
      ;
    return 0;
  }
}
