test/sematest/invalid/nonvoid_method_returns_value.java
class Test {
  public static void main(String[] args) {}
  public int test() {
    return;
  }
}
